--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   db:
     image: postgres:13
     volumes:
-      - ./postgres-data:/var/lib/postgresql/whatever:z
+      - ./postgres-data:/var/lib/postgresql/data
       - ./backend/db-init:/docker-entrypoint-initdb.d
     ports:
       - '5432:5432'
